navbar: fix project resources dropdown menu items that were centred when they should be left aligned

--- a/css/kitanda.css
+++ b/css/kitanda.css
@@ -45,7 +45,6 @@ h6 {
 }
 
 .navbar-inner {
-  text-align:center;
   min-height: 65px;
 }
 
